// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store utils. updateErrors field1 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {
        "testField1": "Error for field 1",
      },
      "hasErrors": true,
      "hasWarnings": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "error": "Error for field 1",
        "warning": "",
      },
      "testField2": Object {
        "error": "",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrors field1, field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {
        "testField1": "Error for field 1",
        "testField2": "Error for field 2",
      },
      "hasErrors": true,
      "hasWarnings": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "error": "Error for field 1",
        "warning": "",
      },
      "testField2": Object {
        "error": "Error for field 2",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrors field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {
        "testField2": "Error for field 2",
      },
      "hasErrors": true,
      "hasWarnings": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "error": "",
        "warning": "",
      },
      "testField2": Object {
        "error": "Error for field 2",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(error) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {
        "testField1": "Error for field 1",
      },
      "hasErrors": true,
      "hasWarnings": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "error": "Error for field 1",
        "warning": "",
      },
      "testField2": Object {
        "error": "",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(error), field1(warning) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {
        "testField1": "Error for field 1",
      },
      "hasErrors": true,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "Error for field 1",
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "error": "",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(error, warning) field2(error, warning) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {
        "testField1": "Error for field 1",
        "testField2": "Error for field 2",
      },
      "hasErrors": true,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField1": "Warning for field 2",
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "Error for field 1",
        "warning": "Warning for field 2",
      },
      "testField2": Object {
        "error": "Error for field 2",
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(warning) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {},
      "hasErrors": false,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "",
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "error": "",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarning field1, field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {},
      "hasErrors": false,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "",
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "error": "",
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field1 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {},
      "hasErrors": false,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "",
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "error": "",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field1 and then field2 = undefined 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {},
      "hasErrors": false,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "",
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "error": "",
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field1 and then field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {},
      "hasErrors": false,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "",
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "error": "",
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "errorsMap": Object {},
      "hasErrors": false,
      "hasWarnings": true,
      "warningsMap": Object {
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "error": "",
        "warning": "",
      },
      "testField2": Object {
        "error": "",
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;
